@@ -16,6 +16,7 @@
 
 + API changes:
   + New CustomBitmapInfo class
+  + New CustomColorInfo class
 
 ! KGySoft.Drawing.DebuggerVisualizers.dll
 =========================================
@@ -27,6 +28,7 @@
     + New CustomBitmapSerializationInfoBase class for serializing custom bitmaps
   + DebuggerHelper class:
     + New DebugCustomBitmap method
+    + New DebugCustomColor method
 
 + KGySoft.Drawing.DebuggerVisualizers.GdiPlus.dll
 =================================================
